--- a/rclone.conf
+++ b/rclone.conf
@@ -1,7 +1,7 @@
-[finitegdrive]
+[gdrivefinite]
 type = drive
 scope = drive
-token = {"access_token":"ya29.a0ARrdaM-7wk6WXOzh0-nPhZ3wQW2dazby4IJikfN-a9Vu6wwp4jJwsu1HcG-V7UVwySTg7bPDWFbLC3O6ynR-HBSgYS1xCdaoE7Gr-FMIto4LTvsdDGZhAG4WDTDgFpjjSRZ5FYXkvp9wbrRK22-UYsVrviHc","token_type":"Bearer","refresh_token":"1//0g-f5yznFPys3CgYIARAAGBASNwF-L9Ir5cPwqSmEHenM7m7PIjY4KArsR8oBSju-J2GhfdDq2SZZPXYameXOTeLu0-CoKr0JsqQ","expiry":"2021-08-06T22:22:03.4542541+05:30"}
-team_drive = 0ALxKRcjoa_kBUk9PVA
+token = {"access_token":"ya29.a0ARrdaM_oTX7mOlP6jFsy5J1gc3qhpxHNLuAVQnP2V4eUy2xaFh6CAJ7Jgu_v48baQZZ7XiCShZ2UEVj6twb6Kz6Cb3OnHSH5pBr2_V3eH222hiW_u0B_eoKqHaUf8llPOmRMz7dPiYBuI7tfebD7nJFmIu3a","token_type":"Bearer","refresh_token":"1//03HDJbAd5ikLOCgYIARAAGAMSNwF-L9IrAhIUW9Mfm2lpaa43cyWTxZM-Jp8MDkF7joXw5XIjCZpVhF5wntyt2yDORvTO4SEtdBA","expiry":"2021-08-14T17:01:21.5595634+04:30"}
+team_drive = 0AMa_jpmKDyTxUk9PVA
 root_folder_id = 
 
